<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTitulo"
        android:textSize="40dp" />

    <Button
        android:id="@+id/btnNuevaPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNuevaPartida" />

    <Button
        android:id="@+id/btnEstadisticas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEstadisticas" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />

</LinearLayout>